--- a/src/App.css
+++ b/src/App.css
@@ -18,7 +18,7 @@
 
 [data-theme='dark'] {
   --background: #1e1e1e;
-  --text-color: #dbdbdbc1;
+  --text-color: #ffffffc1;
   --button-color--form: #253745;
   --button-color: #ff0;
   --box-shadow-day-night: rgba(184, 184, 184, 0.61);
@@ -28,9 +28,9 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  /* font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+    sans-serif; */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: var(--background);
