--- a/src/assets/style/style.css
+++ b/src/assets/style/style.css
@@ -665,3 +665,363 @@ option {
   color: var(--button-color);
   text-decoration: underline;
 }
+
+/* Container for the button and filter bar */
+.filter-container {
+  position: relative;
+  display: inline-block;
+}
+
+/* Button for toggling the filter bar */
+.search-button {
+  padding: 8px;
+  padding-right: 15px;
+  background-color: transparent;
+  color: #e8e8e8;
+  border: none;
+  cursor: pointer;
+}
+
+/* The filter bar itself */
+.filter-bar {
+  display: none;
+  position: absolute;
+  top: calc(100% + 14px);
+  right: 0;
+  background-color: rgb(93, 93, 93);
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.05);
+  padding: 20px;
+  animation: slide .3s ease-out;
+  z-index: 1;
+}
+
+/* Show the filter bar when it's active */
+.filter-bar.active {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  background-color: rgb(93, 93, 93);
+}
+
+/* Filter components */
+.filter-component {
+  width: 100%;
+  min-width: 150px;
+}
+
+.filter-group {
+  width: 100%;
+  min-width: 200px;
+}
+
+.filter-component select,
+.filter-group input {
+  width: 100%;
+  max-width: 200px;
+  padding: 4px;
+  border: 1px solid #ced4da;
+  border-radius: 6px;
+  font-size: 1em;
+  background-color: #ffffff;
+  color: #495057;
+  outline: none;
+  transition: border-color 0.2s ease;
+}
+
+.filter-component select:focus,
+.filter-group input:focus {
+  border-color: #80bdff;
+}
+
+/* Slide animation */
+@keyframes slide {
+  from {
+    opacity: 0;
+    transform: translateY(-10px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+.parent-wrap{
+  box-sizing: border-box;
+  margin-top: 1.5rem;
+}
+
+.parent {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: auto 2fr repeat(3, 1fr);
+  gap: 10px;
+  width: 90%;
+  margin: 0 auto;
+  max-width: 1400px;
+  justify-content: center;
+  text-align: left;
+}
+
+.parent div {
+  background-color: var(--background);
+  border-radius: 8px;
+  padding: 20px;
+  box-shadow: 0 0px 1.5px var(--box-shadow-day-night);
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.parent div:hover {
+  transform: translateY(-1px);
+  box-shadow: 0 1px 1px var(--box-shadow-day-night);
+}
+
+.div1 img {
+  border-radius: 50%;
+  width: 100px;
+  height: 100px;
+  margin-bottom: 15px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.div1 h3 {
+  font-size: 1.5em;
+  margin-bottom: 8px;
+}
+
+.div1 p {
+  font-size: 1em;
+  color: var(--text-color);
+}
+
+.parent h3 {
+  font-size: 1.25em;
+  margin-bottom: 16px;
+  color: var(--text-color);
+  border-bottom: 2px solid var(--text-color);
+  padding-bottom: 8px;
+}
+
+.parent ul {
+  list-style: none;
+  width: 100%;
+  margin-left: -24px ;
+}
+
+.parent li {
+  background: var(--dashboard-color);
+  padding: 10px 15px;
+  margin-bottom: 10px;
+  border-radius: 6px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  transition: background-color 0.2s ease;
+}
+
+.parent li:hover {
+  /* background-color: #dee2e6; */
+}
+
+.delete-button,
+.like-button,
+.comment-button,
+.updates-button,
+.reading-button {
+  background-color: #e74c3c;
+  border: none;
+  color: white;
+  padding: 5px 10px;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 0.9em;
+  transition: background-color 0.2s ease;
+}
+
+.edit-user{  
+  border: none;
+  background-color: var(--dashboard-color);
+  color: #ffffff;
+  padding: 10px;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 1em;
+  justify-content: center;
+  align-items: center;
+}
+
+.like-button {
+  background-color: var(--menu-color);
+  color: rgb(22, 38, 254);
+}
+.comment-button{
+  background-color: var(--menu-color);
+  color: #71f042;
+}
+
+.reading-button{
+  background-color: var(--menu-color);
+}
+
+.updates-button{
+  color: yellow;
+  background-color: var(--menu-color);
+}
+
+.delete-button:hover {
+  background-color: #c0392b;
+}
+
+.div1 { grid-area: 2 / 1 / 4 / 2; }
+.div2 { grid-area: 2 / 2 / 4 / 3; }
+.div3 { grid-area: 2 / 3 / 6 / 4; }
+.div4 { grid-area: 2 / 4 / 3 / 5; }
+.div5 { grid-area: 4 / 1 / 6 / 3; }
+.div6 { grid-area: 3 / 4 / 6 / 5; }
+
+/* Media Query for Tablets */
+@media (max-width: 1200px) {
+  .parent {
+      grid-template-columns: repeat(2, 1fr);
+      grid-template-rows: repeat(7, auto);
+  }
+
+  .div1 { grid-area: 2 / 1 / 3 / 3; }
+  .div2 { grid-area: 3 / 1 / 4 / 2; }
+  .div3 { grid-area: 3 / 2 / 5 / 3; }
+  .div4 { grid-area: 4 / 1 / 5 / 2; }
+  .div5 { grid-area: 5 / 1 / 6 / 3; }
+  .div6 { grid-area: 6 / 1 / 7 / 3; }
+}
+
+/* Media Query for Mobile Devices */
+@media (max-width: 550px) {
+  .parent {
+      grid-template-columns: 1fr;
+      grid-template-rows: repeat(7, auto);
+  }
+
+  .div1, .div2, .div3, .div4, .div5, .div6 {
+      grid-area: auto;
+  }
+
+  .parent div {
+      padding: 15px;
+      font-size: 16px;
+  }
+}
+
+/* BlogEditor.css */
+.blog-editor-container {
+  display: flex;
+  margin: 20px;
+}
+
+.editor-main {
+  flex: 3;
+  margin-right: 20px;
+}
+
+.editor-title-input {
+  width: 100%;
+  font-size: 24px;
+  padding: 10px;
+  margin-bottom: 10px;
+}
+
+.editor-content {
+  height: 300px;
+  margin-bottom: 20px;
+}
+
+.image-upload {
+  margin-top: 20px;
+}
+
+.upload-area {
+  border: 2px dashed #ccc;
+  padding: 20px;
+  cursor: pointer;
+  align-items: center;
+  justify-content: center;
+  display: flex;
+}
+
+.image-url-upload {
+  margin-top: 10px;
+}
+
+.image-url-upload input {
+  padding: 10px;
+  margin-right: 10px;
+  width: 70%;
+}
+
+.image-url-upload button {
+  padding: 10px 20px;
+  background-color: #007bff;
+  color: var(--background);
+  border: none;
+  cursor: pointer;
+}
+
+.preview-section {
+  margin-top: 40px;
+}
+
+.preview-content {
+  padding: 10px;
+  border: 1px solid var(--box-shadow-day-night);
+  background-color: var(--background);
+  border-radius: 5px;
+}
+
+.image-preview {
+  margin-top: 20px;
+}
+
+.image-preview img {
+  display: block;
+  margin: 10px 0;
+  object-fit: cover;
+}
+
+.editor-sidebar {
+  flex: 1;
+  padding: 20px;
+  border-left: 1px solid #ddd;
+}
+
+.labels-section {
+  margin-bottom: 20px;
+}
+
+.publish-section {
+  margin-top: 20px;
+}
+
+.publish-section button {
+  background-color: #ff5722;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  cursor: pointer;
+  border-radius: 5px;
+}
+
+.publish-section button:hover {
+  background-color: #e64a19;
+}
+.url-upload{
+  padding: 8px;
+}
+.url-upload input, button{
+  padding: 4px;
+  margin-right: 4px;
+}
+.labels-section input{
+  padding: 8px;
+}
