update blog list

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 :root {
-  --background: #ffffff;
+  --background: #F8F9FA;
   --dashboard-color:hwb(0 18% 82% / 0.919);
   --text-color: #1e1e1e;
   --shadow-color: rgba(0, 0, 0, 0.61);
