--- a/src/assets/style/style.css
+++ b/src/assets/style/style.css
@@ -400,7 +400,9 @@ p {
 }
 
 .mySwiper {
+  box-sizing: border-box;
   width: 80%;
+  padding-bottom: 10px;
 }
 
 .swiper-button-prev:after,
@@ -995,8 +997,8 @@ pre {
   word-wrap: break-word; /* Break long words and wrap them */
   overflow-x: auto; /* Horizontal scroll if content overflows */
   max-width: 100%; /* Prevent code block from exceeding screen width */
-  background-color: #2d2d2d; /* Background color for code */
-  color: #f8f8f2; /* Text color for code */
+  background-color: var(--background); /* Background color for code */
+  color: var(--text-color); /* Text color for code */
   padding: 16px;
   border-radius: 5px;
   font-size: 14px; /* General font size */
@@ -1067,7 +1069,7 @@ pre code {
   gap: 10px;
   padding: 10px;
   background: var(--admin-color);
-  border-bottom: 1px solid var(--box-shadow-day-night);
+  border-bottom: 1px solid var(--auth-color);
   overflow-x: auto;
   overflow-y: hidden;
   white-space: nowrap;
@@ -1108,8 +1110,12 @@ pre code {
   border-radius: 5px;
   max-width: 80%;
   max-height: 80%;
-  overflow-y: auto;
   position: relative;
+}
+
+.preview-modal img, video{
+  width: 100%;
+  height: auto;
 }
 
 .close-modal {
@@ -1139,18 +1145,21 @@ pre code {
   text-align: left;
 }
 
-/* .popover {
-  position: absolute;
-  z-index: 2;
+.post-cateogory{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 4px;
 }
 
-.cover {
-  position: fixed;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-} */
+.post-category-select{
+  background-color: var(--auth-color);
+  padding: 2px;
+}
+
+.post-message{
+  /* display: none; */
+}
 
 /* General notification styles */
 .notification {
@@ -1256,4 +1265,34 @@ input[type="color"] {
   margin-left: 5px;
 }
 
+.crop-container {
+  margin-top: 20px;
+}
 
+.crop-container .react-image-crop {
+  max-width: 100%;
+  height: auto;
+}
+
+.modal-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.modal-input {
+  margin: 10px 0;
+}
+
+.button-group {
+  margin-top: 20px;
+}
+
+.modal-button {
+  margin: 5px;
+}
+
+.post-item{
+  width: 90%;
+  margin: 0 auto;
+}
